src/objects/Patient_Completed_Screening_Report__c.object
<CustomObject>
    <fields>
        <fullName>Consent_Date__c</fullName>
        <label>Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISPY2ID__c</fullName>
        <label>ISPY2ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Consent_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consent Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRI_Volume_Status__c</fullName>
        <label>MRI Volume Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menopausal_Status__c</fullName>
        <label>Menopausal Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSE_Status__c</fullName>
        <label>OSE Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSP_Status__c</fullName>
        <label>OSP Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Date__c</fullName>
        <label>Reg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Patient Completed Screening Reports</relationshipLabel>
        <relationshipName>Patient_Completed_Screening_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <label>Trial Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Patient Completed Screening Report</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Completed Screening Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>